# kiwi_test

./: README.md  compose.yaml
.github/workflows/: on_pr.yaml
app/: Dockerfile  entrypoint.sh  pyproject.toml
app/conf/: .env  uvicorn_logging.json
app/src/: _logging.py  app.py  exceptions.py
app/src/contracts/: base.py  currency.py  sort_itineraries.py
app/src/currency/: config.py  exceptions.py  fetch.py
app/src/currency/apis/: base.py  exceptions.py  exchangerate.py
app/src/sorts/: __init__.py  base.py  exceptions.py
app/tests/integration/: rates.json  test_api.py
app/tests/integration/cases/: cheapest_1.json  cheapest_2.json  fastest_1.json
app/tests/integration/http/: http-client.env.json  test_main.http
app/tests/integration/http/kiwi_example/: in.json  out.json
app/tests/unit/: __init__.py  test_currency_api.py  test_fetch_cache.py  test_sorts.py
proxy/: nginx.conf
